--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </div>
                     <div class="bases">
                         <div class="base" draggable="true" data-anticodon="UAC" data-aa="Methionine">tRNA: UAC (Met)</div>
-                        <div class="base" draggable="true" data-anticodon="GCU" data-aa="Alanine">tRNA: CGA (Arg)</div>
-                        <div class="base" draggable="true" data-anticodon="CCG" data-aa="Proline">tRNA: CCC (Pro)</div>
-                        <div class="base" draggable="true" data-anticodon="GGG" data-aa="Glycine">tRNA: GGC (Gly)</div>
+                        <div class="base" draggable="true" data-anticodon="GCU" data-aa="Alanine">tRNA: GCU (Arg)</div>
+                        <div class="base" draggable="true" data-anticodon="CCC" data-aa="Proline">tRNA: CCC (Pro)</div>
+                        <div class="base" draggable="true" data-anticodon="GGC" data-aa="Glycine">tRNA: GGC (Gly)</div>
                     </div>
                     <div id="stage3-feedback" class="feedback"></div>
                     <button id="completeStage3" class="next-button" style="display:none;">Complete</button>
