--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="bases">
                         <div class="base" draggable="true" data-anticodon="UAC" data-aa="Methionine">tRNA: UAC (Met)</div>
-                        <div class="base" draggable="true" data-anticodon="GCU" data-aa="Alanine">tRNA: GCU (Arg)</div>
+                        <div class="base" draggable="true" data-anticodon="CGU" data-aa="Arginine">tRNA: CGU (Arg)</div>
                         <div class="base" draggable="true" data-anticodon="CCC" data-aa="Proline">tRNA: CCC (Pro)</div>
                         <div class="base" draggable="true" data-anticodon="GGC" data-aa="Glycine">tRNA: GGC (Gly)</div>
                     </div>
