--- a/index.html
+++ b/index.html
@@ -106,7 +106,20 @@
             </div>
         </div>
     </div>
-
+<!-- Base Pair Key -->
+            <div class="key-section">
+                <h2>Base Pair Key</h2>
+                <ul>
+                    <li><img src="A.png" alt="A" /> - Adenine (A)</li>
+                    <li><img src="T.png" alt="T" /> - Thymine (T)</li>
+                    <li><img src="C.png" alt="C" /> - Cytosine (C)</li>
+                    <li><img src="G.png" alt="G" /> - Guanine (G)</li>
+                    <li><img src="U.png" alt="U" /> - Uracil (U)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
